<resources>
    <string name="app_name">MyStore</string>
    <string name="intro_line">A solução facil para compras online</string>
    <string name="intro_second_line">A loja agora nas suas mãos!!!</string>
    <string name="btn_login">Login</string>
    <string name="btn_new_User">Sing Up</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="user_login">USER LOGIN</string>
    <string name="user_Registration">New User Registration</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_adress">Email adress</string>
    <string name="password">Password</string>
    <string name="Confirm_password">Confirm Password</string>
    <string name="contact_number">Contact number</string>
    <string name="btn_register">Register</string>
    <string name="value_200">200$</string>
    <string name="popular_products">Popular Products</string>
    <string name="laptop_desc">
        RAM:16GB
        HD:1Tera
        Este incrivel PC ofereceum equilibrio perfeito entre desempenho e versatilidade.
        Com um processador quad-croe de ultima geração,16GB de RAM e
        e uma placa de video dedicada.
    </string>
    <string name="iphone_desc">
        O iphone 13 é o a epitome da elegância e inovação. Com seu desing
        sofisticado e tela Super Retina XDR, suas imagens ganham vida com
        cores vibrantes e detalhes impresionantes.
    </string>
    <string name="ac_desc">
        Este aparelho foi projeta para proporcionar conforto máximo
        em qualquer ambiente. Com uma capacidade poderoza de refrigeração
        ele mantem seu espaço fresco até nos dias mais quentes.
    </string>
</resources>