<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:src="@drawable/shop_logo"
        android:layout_gravity="center"
        android:layout_marginTop="100sp"
        />
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/intro_line"
    android:textSize="20sp"
    android:textAllCaps="true"
    android:gravity="center"
    android:textColor="@color/dark_red"
    android:layout_marginTop="50sp"
    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro_second_line"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:gravity="center"
        android:textColor="@color/light_red"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:backgroundTint="#B60707"
        android:layout_marginTop="120sp"
        android:text="@string/btn_login"
        android:textSize="18sp"
        />
    <Button
        android:id="@+id/btnUserSingup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FA0101"
        android:layout_marginTop="10sp"
        android:text="@string/btn_new_User"
        />
</LinearLayout>