<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:src="@drawable/shop_logo"
        android:layout_gravity="center"
        android:layout_marginTop="100sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_login"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/dark_red"
        android:layout_marginTop="50sp"
        android:layout_marginBottom="40sp"
        />
<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:id="@+id/userEmailLoginWrapper"
    >
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userEmail"
        android:textSize="18sp"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email"
        android:textColor="@color/light_red"
        />
</com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/userPasswordWrapper">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:id="@+id/userPassword"
            android:inputType="textPassword"
            android:hint="@string/enter_password"
            android:textColor="@color/light_red"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btnUserLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/user_login"
        android:backgroundTint="@color/light_red"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Or"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/dark_red"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_new_User"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/dark_red"

        />
</LinearLayout>